k8s/deployment_new.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-deployment-new
spec:
  selector:
    matchLabels:
      type: app
      ver: new
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        type: app
        ver: new
    spec:
      containers:
      - name: container
        image: linkverseunibooker/frontend:v2
        livenessProbe:		
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:		
          httpGet:
            path: /test
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 3
      terminationGracePeriodSeconds: 0
