k8s/frontend-deployment-canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment-canary
  namespace: unibooker
spec:
  selector:
    matchLabels:
      app: frontend
      ver: canary
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
        ver: canary
    spec:
      containers:
      - name: frontend
        image: linkverseunibooker/frontend:latest
        ports:
          - containerPort: 80
