k8s/frontend_rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend-rollout
  namespace: unibooker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker1
      containers:
        - name: frontend
          image: linkverseunibooker/frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 443
          resources:
            requests:
              cpu: "200m"
              memory: "128Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          volumeMounts:
            - name: tls-secret
              mountPath: /etc/nginx/ssl
              readOnly: true
      volumes:
        - name: tls-secret
          secret:
            secretName: unibooker-tls
  strategy:
    blueGreen:
      activeService: frontend-service-stable
      autoPromotionEnabled: true
      autoPromotionSeconds: 30
