k8s/frontend-service-canary.yml
apiVersion: v1
kind: Service
metadata:
  name: new-service
spec:
  selector:
    type: app
    ver: new
  ports:
  ports:
  - port: 8080
    targetPort: 8080
